* src/org/jcae/mesh/amibe/algos3d/SplitEdge.java:   - Do not implicitly multiply edge length by sqrt(2).   - Fix checking of too near vertices.
git-svn-id: https://jcae.svn.sourceforge.net/svnroot/jcae/trunk@1426 9c4724a3-da1e-0410-bc68-88f18da35cd4